feat: add mocha tests

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "sumOfOther.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "make": "make.js",
-    "recursion": "recursion.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,6 +19,7 @@
   "devDependencies": {
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0"
   }
 }
